Findbugs: oxf-ses-adapter